<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewIdProjectIncidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mantis_id_incidence_project" />

    <TextView
        android:id="@+id/textViewProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mantis_name_project" />

    <TextView
        android:id="@+id/textViewIncidenceSeverity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mantis_severity_project" />

    <TextView
        android:id="@+id/textViewIncidenceState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mantis_state_project" />

</LinearLayout>