<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/idProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gex_id_project" />

            <TextView
                android:id="@+id/nameProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mantis_name_project" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gex_description_project"
                android:id="@+id/textView2" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

